--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,26 @@ jobs:
           working_directory: ./.circleci
           command: |
             ansible-playbook -i inventory.txt main.yml
+            
+  smoke_test:
+      docker:
+        - image: alpine:latest
+      steps:
+        - run: apk add --update curl
+        - run:
+            name: smoke test.
+            command: |
+              URL="https://blog.udacity.com/"
+              if curl -s --head ${URL} # test if blog.udacity. com exists
+              then
+               return 0
+              else
+               return 1
+              fi
 
 workflows:
   my_workflow:
     jobs:
-      - configure_infrastructure
+      - smoke_test:
+        - requires
+          - configure_infrastructure
